Version 0.4.9
-------------
Improvement: Timeout for notifications (to disappear) is now configurable. Default is to keep them open indefinitely.
Improvement: Allow you to use the X-DNZB-Category HTTP header on sites that supports it (nzbs.org, Newzbin), instead of using the default auto-categorization. The X-DNZB-Category header will only contain the main category (eg. 'TV'), versus auto-categorization that will contain the full category name (eg. TV.x264)
Bugfix: Show 'Download Failed' notifications instead of 'Download Complete' when appropriate.

Version 0.4.8
-------------
New feature: "Download Complete" desktop notifications
New feature: "Hard-coded category" & "Default category" options, to override NZB index site categories, or send a default when no category is found on the NZB index site.
Bugfix: nzbs.org auto-categorization didn't work on homepage (Browse All NZBs)
Bugfix: NZBXXX.com 1-click NZB download was not working; added Username & API Key options in the extension options to fix. http://code.google.com/p/sabconnectplusplus/issues/detail?id=12
Bugfix: Some search results & subsequent results pages wouldn't show the 1-click NZB download buttons. http://code.google.com/p/sabconnectplusplus/issues/detail?id=11

Version 0.4.7
-------------
Improvement: Auto-categorization for nzbs.org. Categories are named "Console.XBox360", "TV.x264", etc. and need to match a category NAME you have defined in SABnzbd. See http://code.google.com/p/sabconnectplusplus/wiki/Categories#nzbs.org for details.

Version 0.4.6
-------------
Bugfix: 0.4.5 broke 1-click NZB download buttons on nzbs.org, in list view
Bugfix: 1-click NZB download button on nzbs.org details page looked weird after click

Version 0.4.5
-------------
Bugfix: bandwidth graph wasn't working; thanks to Sajid Anwar for the fix.
New feature: Added 1-click NZB download for nzbindex.nl
Improvement: Added 'Send selected to SABnzbd' buttons on nzbs.org, to send multiple NZBs to SAB in one click.