@@ -205,9 +205,19 @@ function checkForErrors() {
         <div class="tip">1-Click NZB downloading</div>
         <br /><br />
 		
+        <label for="use_nice_name_binsearch">binsearch.info: Use display name</label>
+        <input class="extension-preference-checkbox" type="checkbox" id="use_nice_name_binsearch" value="1" />
+        <div class="tip">Uncheck to use NZB filename instead of full name as displayed on website.</div>
+        <br /><br />
+		
         <label for="enable_nzbindex">nzbindex.com 1-Click NZB</label>
         <input class="extension-preference-checkbox" type="checkbox" id="enable_nzbindex" value="1" />
         <div class="tip">1-Click NZB downloading</div>
+        <br /><br />
+
+        <label for="use_nice_name_nzbindex">nzbindex.com: Use display name</label>
+        <input class="extension-preference-checkbox" type="checkbox" id="use_nice_name_nzbindex" value="1" />
+        <div class="tip">Uncheck to use NZB filename instead of full name as displayed on website.</div>
         <br /><br />
 		
         <label for="enable_nzbsrus">nzbsrus.com 1-Click NZB</label>
